@@ -30,8 +30,9 @@
 - Fix: [#15255] Tile Inspector shows banner information on walls that do not contain one.
 - Fix: [#15257] Chat icon shows in scenario/track editor. Other icons don't disable when deactivated in options menu.
 - Fix: [#15289] Unexpected behavior with duplicated banners which also caused desyncs in multiplayer.
-- Fix: [#15451] Guest list name filter remains after group selection.
+- Fix: [#15322] Circus music doesn't play.
 - Fix: [#15377] Entrance/exit ghost doesn't work on different stations without touching them first.
+- Fix: [#15451] Guest list name filter remains after group selection.
 - Fix: [#15476] Crash when placing/clearing small scenery.
 - Fix: [#15487] Map animations do not work correctly when loading an exported SV6 file in vanilla RCT2.
 - Fix: [#15490] Tile inspector needlessly updates clearance height when changing surface slopes.
